add testGetId() test